# proyecto-air_predict

./: README.md
air-predictor-test/: app_cantidad_de_benceno-0.1-py3-none-any.whl  main.py  requirements.txt
air_predictor_package/: MANIFEST.in  README.md  requirements.txt  setup.cfg
air_predictor_package/air_predictor/: __init__.py  predictor.py
ari-predict-api/: requirements.txt
ari-predict-api/app/: config.py
ari-predict-api/app/bp_api/: models.py  resources.py  schemas.py
ari-predict-api/app/templates/: index.html
ml-model/: model.pkl  scaler_x.pkl  scaler_y.pkl
notebook/: 1Notebook.ipynb
