[metadata]
name = app_cantidad_de_benceno
version = 0.1
author = Rodrigo Contreras 
description = Paquete para predecir la cantidad de beceno en el aire apartir de algunos datos 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
include_package_data = true
install_requires =
    numpy
    scikit-learn
    joblib
python_requires = >=3.7